--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,14 +7,17 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "react-scripts test",
+    "test:watch": "react-scripts test --watch",
+    "test:coverage": "react-scripts test --coverage"
   },
   "dependencies": {
     "dotenv": "^16.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.3",
+    "react-router-dom": "^7.1.5",
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
     "stripe": "^17.6.0",
@@ -22,16 +25,26 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
+    "babel-jest": "^29.7.0",
+    "chai": "^5.1.2",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "jest": "^29.7.0",
+    "jsdom": "^26.0.0",
+    "jsdom-global": "^3.0.2",
+    "mocha": "^11.1.0",
     "postcss": "^8.5.1",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.5"
   }
